# BrainAgePrediction-ABIDE

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  requirements.yml
BrainAgePrediction-ABIDE/: best_model_regressor.csv  hp_search.py  library.py  preprocessing_lib.py  regression_pipelines.py  tuning.ipynb
BrainAgePrediction-ABIDE/.ipynb_checkpoints/: data_visualization-checkpoint.ipynb  model copy-checkpoint.ipynb
BrainAgePrediction/dataset/: README.txt
brain_age_predictor/: best_model_mlp.csv  preprocessing_lib.py  regression.ipynb  regression_pipelines.py
docs/: conf.py  index.md  index.rst  install.md  preprocessing.rst  regression.rst  requirements.txt
docs/_build/doctrees/: index.doctree  preprocessing.doctree  regression.doctree
docs/_build/html/: genindex.html  preprocessing.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build1/html/: .buildinfo  index.html  objects.inv  regression.html  search.html
notebooks/: best_model_2.csv  best_model_regressor.csv  data_visualization.ipynb  environment.yml  hp_search.py  library.py  model copy.ipynb  model.ipynb  preprocessing.ipynb  tuning.ipynb
tests/: tests.py
